This commit will fix the overflowing of products in container

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -7,7 +7,7 @@
   background-size: cover; */
   align-items: center;
   justify-content: center;
-  height: 300px;  
+  height: 100px;  
   margin-bottom: 20px;
 }
 
