--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,10 +1,9 @@
 .navbar {
+  border: solid white;
   display: flex;
   top: 0;
-  width: 100%;
-  height: 180px;
+  height: 160px;
   padding: 10px 20px;
-  margin-bottom: 20px;
   background-color: #333;
   color: white;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -12,18 +11,24 @@
 }
 
 .navbar-container {
+  border: solid white;
   margin: auto;
   display: flex;
   width: 90%;
+  height: 100px;
   align-items: center;
-  padding: 0.8rem;
+  padding: 1rem;
   color: white;
 }
 
 .navbar-logo-container {
-  width: 320px;
-  margin: 5px;
-  font-size: 24px;
+  border: solid white;
+  display: flex;
+  justify-content: center;
+  width: 310px;
+  height: 100%;
+  margin-right: auto;
+  font-size: 23px;
   font-weight: bold;
   letter-spacing: 2px;
   color: white;
@@ -31,23 +36,24 @@
 
 .navbar-logo{
   color: white;
+  
 }
 
 .navbar-logo:hover{
   color: white;
 }
 
-ul {
+.navbar-links {
+  border: solid white;
   display: flex;
   list-style-type: none;
-  margin-left: auto;
   color: white;
 }
 
 
 
 .list-item {
-  margin: 10px 60px;
+  margin: 10px 40px;
   color: white;
   font-size: 20px;
   font-weight: 600;
@@ -55,5 +61,19 @@ ul {
   transition: color 0.3s;
 }
 
+@media (max-width: 768px) {
+  
+
+  .navbar-logo-container {
+    margin: auto;
+    
+  }
 
 
+  .navbar-links {
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      display: none; /* Hide the links initially */
+  }
+}
